--- a/package.json
+++ b/package.json
@@ -20,31 +20,38 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-react": "^5.0.1",
-    "@vitest/ui": "^2.2.5",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.5.2",
-    "jsdom": "^26.0.0",
-    "vitest": "^2.2.5",
+    "@vitest/ui": "^2.1.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
-    "postcss": "^8.5.7",
+    "gh-pages": "^6.2.0",
+    "jsdom": "^26.0.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.5.7",
-    "@tailwindcss/forms": "^0.5.9",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
-    "vite": "^7.1.3",
-    "vite-plugin-pwa": "^0.21.3",
-    "workbox-window": "^7.3.0",
-    "gh-pages": "^6.2.0"
+    "vite": "^6.0.7",
+    "vite-plugin-pwa": "^1.0.3",
+    "vitest": "^2.1.5",
+    "workbox-window": "^7.3.0"
   },
-  "keywords": ["PWA", "calculator", "coil", "manufacturing", "graewe"],
+  "keywords": [
+    "PWA",
+    "calculator",
+    "coil",
+    "manufacturing",
+    "graewe"
+  ],
   "author": "GRAEWE",
   "license": "MIT",
   "description": "GRAEWE Coiler Calculator - A PWA for manufacturing coil calculations"
